force-app/main/default/objects/Form_Submission__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>