force-app/main/default/objects/Form_Submission__c/fields/First_object_data__c.field-meta.xml
<CustomField>
    <fullName>First_object_data__c</fullName>
    <label>First object data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>