force-app/main/default/objects/Form_Submission__c/fields/Form_Data__c.field-meta.xml
<CustomField>
    <fullName>Form_Data__c</fullName>
    <label>Form Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>