force-app/main/default/objects/Form_Submission__c/fields/Other_fields_data__c.field-meta.xml
<CustomField>
    <fullName>Other_fields_data__c</fullName>
    <label>Other fields data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>