force-app/main/default/objects/Form_Submission__c/fields/Second_object_data__c.field-meta.xml
<CustomField>
    <fullName>Second_object_data__c</fullName>
    <label>Second object data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>