force-app/main/default/objects/Form_Submission__c/fields/Third_object_data__c.field-meta.xml
<CustomField>
    <fullName>Third_object_data__c</fullName>
    <label>Third object data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>